# Geese

./: LICENSE  main.py  pyproject.toml
src/: decorator.py  example_tools.py  goose.py  model.py  model_class.py  tools
src/__init__.py/model/: model_class.py
src/a2a_protocol/: agent_executor.py
src/builtin_tools/code_exec/: exec.py
src/builtin_tools/qdrant/: vector_store.py
src/builtin_tools/shell_cmd/: shell.py
src/goose_framework/: anaconda.py  goose.py  tools.py
src/goose_framework/builtin_tools/brave_search/: engine.py
src/goose_framework/builtin_tools/code_exec/: exec.py
src/goose_framework/builtin_tools/qdrant/: vector_store.py  vector_test.py
src/goose_framework/model/: model_class.py  prompt_template.py
src/gradio/: demo.py
src/gradio/.gradio/flagged/: dataset1.csv
src/model/: model_class.py  tools.py
