[project]
name = "geese"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.59",
    "dotenv>=0.9.9",
    "fastembed>=0.7.4",
    "gradio>=6.8.0",
    "mem0ai>=1.0.5",
    "openai>=2.24.0",
    "qdrant-client>=1.17.0",
    "ruff>=0.15.4",
]
